<resources>
    <string name="app_name">Apprentissage</string>
    <string name="loading_peers">Loading peers&#8230;</string>
    <string name="loading_folders">Loading folders&#8230;</string>
    <string name="cd_folders_list">Folders list</string>
    <string name="cd_peers_list">Peers list</string>
    <string name="cd_folder_name">Name of the folder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="folder_add">Dossier ajouté</string>
    <string name="folder_deleted">Dossier supprimé</string>
    <string name="question_record">Enregistrer question</string>
    <string name="listen_question">ecouter question</string>
    <string name="record_answer">Enregistrer réponse</string>
    <string name="listen_answer">écouter réponse</string>
    <string name="register_quit">Enregistrer et quitter</string>
    <string name="register_create_another_peer">Enregistrer et créer une autre paire</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="pair_colon_id">Pair : %1$d</string>
    <string name="title_activity_listen_peers">ListenPeersActivity</string>
    <string name="play">Play</string>
    <string name="wrong">Faux</string>
    <string name="good">Bon</string>
    <string name="peer_idpeer">Pair : %d</string>
    <string name="_slash_">%d/%d</string>
    <string name="register_question">Question enregistré</string>
    <string name="register_answer">Réponse enregistré</string>
    <string name="validate">Valider</string>
    <string name="add_folder">Ajouter folder</string>
    <string name="name">Name</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="peer">peer</string>
    <string name="knowledge">Knowledge</string>
    <string name="add_peer">Ajouter pair</string>
    <string name="micro">micro</string>
    <string name="title_activity_folder_settings">Folder Settings</string>
    <string name="settings">Settings</string>
    <string name="auto_play">Auto play</string>
    <string name="pref_header_peer">Peer</string>
    <string name="desc">DESC</string>
    <string name="q_a"><![CDATA[Q -> A]]></string>
    <string name="a_q"><![CDATA[A -> Q]]></string>
    <string name="asc">ASC</string>
</resources>
