...

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintDimensionRatio="0.5"
            app:layout_constraintLeft_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/record_question_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question_record"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/listen_question_btn"
                android:enabled="@{!peer.fileNameQuestion.empty}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/listen_question" />
        </LinearLayout>

...
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <Button
                android:id="@+id/record_answer_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/record_answer" />
            <Button
                android:id="@+id/listen_answer_btn"
                android:enabled="@{!peer.fileNameAnswer.empty}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/listen_answer" />

        </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/exit_btn"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:enabled="@{!peer.fileNameAnswer.empty&amp;&amp;!peer.fileNameQuestion.empty}"
                android:text="@string/register_quit" />
...
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:enabled="@{!peer.fileNameAnswer.empty||!peer.fileNameQuestion.empty}"
                android:text="@string/reset" />

            <Button
                android:id="@+id/record_another_btn"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:enabled="@{!peer.fileNameAnswer.empty&amp;&amp;!peer.fileNameQuestion.empty}"
                android:text="@string/register_create_another_peer" />
...
